cmake_minimum_required(VERSION 3.10)
project(PolyM)
if(CMAKE_GNU_COMPILER_ID)
    set(CMAKE_CXX_FLAGS "-std=c++11 -pedantic -Wall -Wextra -Weffc++ -O3 -pthread")
endif(CMAKE_GNU_COMPILER_ID)
add_library(polym Msg.cpp Queue.cpp)
if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
add_executable(testpolym Test.cpp)
IF (UNIX)
	target_link_libraries(testpolym pthread)
ENDIF ()
target_link_libraries(testpolym polym)
